another section added

--- a/src/css-components/divs.css
+++ b/src/css-components/divs.css
@@ -19,4 +19,17 @@
     .ul-div {
         @apply flex flex-col w-full h-full justify-around capitalize tracking-wider lg:flex-row lg:w-[32vw]
     }
+
+    
+    .explore-div {
+        @apply w-full px-3 flex flex-col gap-12 items-center justify-center lg:items-start lg:px-17
+    }
+
+    .card-holster-div{
+            @apply w-full  flex flex-col items-center gap-12 lg:flex-row lg:justify-around
+    }
+
+    .complaintcard-div{
+        @apply bg-red-400 h-[36vh] w-[90%] lg:h-[50vh] lg:w-[30%]
+    }
 }
