--- a/src/css-components/button.css
+++ b/src/css-components/button.css
@@ -6,7 +6,7 @@
         @apply rounded-md border-0 h-[5vh] capitalize tracking-widest font-semibold cursor-pointer bg-white text-red-800 w-[28vw] lg:w-[18vw]
     }
     .learn-more-btn {
-        @apply rounded-md border-0 h-[5vh] capitalize tracking-widest font-semibold cursor-pointer text-white bg-red-800 ring-2 ring-white w-[28vw] lg:w-[18vw]
+        @apply rounded-md border-0 h-[5vh] capitalize tracking-widest font-semibold cursor-pointer
     }
 
     .header-login-btn {
