--- a/src/css-components/button.css
+++ b/src/css-components/button.css
@@ -5,6 +5,9 @@
     .report-btn {
         @apply rounded-md border-0 h-[5vh] capitalize tracking-widest font-semibold cursor-pointer bg-white text-red-800 w-[28vw] lg:w-[18vw] lg:h-[7vh]
     }
+    .update-btn {
+        @apply rounded-md border-0 h-[5vh] capitalize tracking-widest font-semibold cursor-pointer bg-transparent text-red-800 w-[28vw] lg:w-[18vw] lg:h-[7vh]
+    }
     .learn-more-btn {
         @apply rounded-md border-0 h-[5vh] capitalize tracking-widest font-semibold cursor-pointer lg:h-[7vh]
     }
