--- a/src/css-components/divs.css
+++ b/src/css-components/divs.css
@@ -1,6 +1,6 @@
 @layer {
     .header {
-        @apply h-[8vh] bg-white w-full fixed flex flex-row items-center justify-between px-7 border-b-2
+        @apply h-[8vh] bg-white w-full fixed flex flex-row items-center justify-between px-7 border-b-2 
     }
 
     .hero-section{
@@ -8,7 +8,7 @@
     }
 
     .dropdown-div {
-        @apply w-[53%] bg-white h-[31vh] absolute ml-50 duration-200 lg:opacity-100 lg:mt-0 lg:ml-97 lg:w-[63vw] lg:flex lg:h-[8vh] lg:flex-row lg:justify-between lg:items-start
+        @apply w-[53%] bg-white h-[31vh] absolute ml-50 duration-200 lg:opacity-100 lg:mt-0 lg:ml-97 lg:w-[63vw] lg:flex lg:h-[8vh] lg:flex-row lg:justify-between lg:items-start py-1 lg:bg-transparent
     }
 
     .side-div {
@@ -34,7 +34,7 @@
     }
 
     .middle-section-div {
-        @apply h-[100vh] w-full bg-red-500 flex flex-col gap-5 justify-center items-center px-4
+        @apply h-[50vh] lg:h-[100vh] w-full bg-red-500 flex flex-col gap-5 justify-center items-center px-4
         
     }
 
@@ -47,7 +47,7 @@
     }
 
     .resolution-section-div {
-        @apply bg-red-700 h-[173vh] w-full px-5 py-4 lg:h-[70vh]
+        @apply bg-red-700 h-[183vh] w-full px-5 py-4 lg:h-[70vh]
     }
 
     .resolutionCards {
